# cgal_material_reflector

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp  stdfx.h  t1  t1.cbp
mesh/: mesh.cpp  mesh.h
vert/: vert.cpp  vert.h
